--- a/templates/delete_movie.html
+++ b/templates/delete_movie.html
@@ -18,6 +18,13 @@
     {% endif %}
     {% endwith %}
 
+    <form method="POST">
+        <p>Are you sure you want to delete this movie?</p>
+        <button type="submit">Delete</button>
+        <a href="{{ url_for('user_movies', user_id=user_id) }}">Cancel</a>
+    </form>
+    
+
     <a href="/">
         <button type="button">Home</button>
     </a>
