--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -18,22 +21,33 @@
     {% endif %}
     {% endwith %}
 
-    <form action="/add_user" method="POST" >
-        <label for="firstname">Firstname:</label>
-        <input type="text" id="firstname" name="firstname" required><br><br>
+    <form action="/add_user" method="POST">
+        <div class="input-section">
+            <div class="input-group mb-1">
+                <label for="firstname">Firstname:</label>
+                <input type="text" class="form-control" id="firstname" name="firstname" required><br><br>
+            </div>
 
-        <label for="lastname">LastName:</label>
-        <input type="text" id="lastname" name="lastname" required><br><br>
+            <div class="input-group mb-1">
+                <label for="lastname">LastName:</label>
+                <input type="text" class="form-control" id="lastname" name="lastname" required><br><br>
+            </div>
 
-        <label for="birthdate">Birthdate:</label>
-        <input type="date" id="birthdate" name="birthdate" required><br><br>
-
-        <input type="submit" value="Add User">
+            <div class="input-group mb-1">
+                <label for="birthdate">Birthdate:</label>
+                <input type="date" class="form-control" id="birthdate" name="birthdate" required><br><br>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Add User">
+        </div>
     </form>
 
     <a href="/">
-        <button type="button">Homepage</button>
+        <button type="button" class="btn">Homepage</button>
     </a>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 
 </body>
 
