--- a/templates/index.html
+++ b/templates/index.html
@@ -5,51 +5,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <h1>Welcome to your movie app!</h1>
+    <div class="home-section">
+        <div class="nav-section">
+            <h1>Welcome to your movie app!</h1>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a href="/add_movie">
+                        <button type="button" class="btn">Add movie</button>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/add_user">
+                        <button type="button" class="btn">Add user</button>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/users">
+                        <button type="button" class="btn">List users</button>
+                    </a>
+                </li>
+            </ul>
+        </div>
 
-    <a href="/add_movie">
-        <button type="button">Add movie</button>
-    </a>
-
-    <a href="/add_user">
-        <button type="button">Add user</button>
-    </a>
-
-    <a href="/users">
-        <button type="button">List users</button>
-    </a>
-
-    {% if movies %}
-    <ul>
-        {% for movie in movies %}
-        <li>
-            <div class="movie-list">
-                <p style="cursor: pointer;">{{ movie.movie_title }}</p>
-                <div class="button-action">
-                    <form action="/update_movie/{{ movie.id }}/" method="POST">
-                        <button type="submit">Update movie</button>
-                    </form>
-                    {% if users %}
+        {% if movies %}
+        <ul>
+            {% for movie in movies %}
+            <li>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ movie.movie_title }}</h5>
+                        <form action="/update_movie/{{ movie.id }}/" method="POST">
+                            <button type="submit" class="btn btn-primary">Update movie</button>
+                        </form>
+                        {% if users %}
                         {% for user in users %}
-                            {% if movie.user_id == user.id %}
-                            <form action="/users/{{ user.id }}/delete_movie/{{ movie.id }}/" method="POST">
-                                <button type="submit">Delete movie for {{ user.first_name }} {{ user.last_name }}</button>
-                            </form>
-                            {% endif %}
+                        {% if movie.user_id == user.id %}
+                        <form action="/users/{{ user.id }}/delete_movie/{{ movie.id }}/" method="POST">
+                            <button type="submit" class="btn btn-danger">Delete movie for {{ user.first_name }} {{ user.last_name }}</button>
+                        </form>
+                        {% endif %}
                         {% endfor %}
-                    {% endif %}
+                        {% endif %}
+                    </div>
                 </div>
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p>No movie available.</p>
-    {% endif %}
+            </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <p>No movie available.</p>
+        {% endif %}
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
