--- a/templates/users.html
+++ b/templates/users.html
@@ -5,23 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     {% if users %}
-    <ul>
+    <ul class="list-group">
         {% for user in users %}
-        <li>
-            <div class="user-list">
-                <p style="cursor: pointer;"> {{user.first_name}} {{ user.last_name}}</p>
-            </div>
-        </li>
+        <li class="list-group-item">{{user.first_name}} {{ user.last_name}}</li>
         {% endfor %}
     </ul>
     {% else %}
     <p>No users available.</p>
     {% endif %}
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
