--- a/templates/delete_movie.html
+++ b/templates/delete_movie.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -18,17 +21,13 @@
     {% endif %}
     {% endwith %}
 
-    <form method="POST">
-        <p>Are you sure you want to delete this movie?</p>
-        <button type="submit">Delete</button>
-        <a href="{{ url_for('user_movies', user_id=user_id) }}">Cancel</a>
-    </form>
-    
-
     <a href="/">
-        <button type="button">Home</button>
+        <button type="button" class="btn btn-primary">Home</button>
     </a>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
