--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,18 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="/add_director">
+                        <button type="button" class="btn">Add director</button>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/users">
                         <button type="button" class="btn">List users</button>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/directors">
+                        <button type="button" class="btn">List directors</button>
                     </a>
                 </li>
             </ul>
